...
                        withAnimation(.smooth) {
                            taskListViewModel.moveTasks(indices: indexSet, newOffset: newOffset, tasks: tasks, modelContext: modelContext)
                        }
                    }
                }
                .listStyle(.insetGrouped)
                .navigationTitle("Tasks")
                .sheet(isPresented: $addTaskView) {
                    AddTask()
                        .presentationDetents([.fraction(0.25)])
                }
                .toolbar {
                    ToolbarItem(placement: .topBarTrailing) {
...
                Spacer()
                HStack {
                    Spacer()
                    Button {
                        addTaskView = true
                    } label: {
                        ButtonView(buttonName: "Add Task", icon: "plus.circle", backgroundColor: .gray.opacity(0.4), textColor: colorScheme == .light ? .black : .white)
                    }
                    .padding(.horizontal, 40)
                    .padding(.bottom, 30)
                    .accessibilityIdentifier("AddTaskButton")
                }
            }
...
